--- a/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_GoogleAnalytics.cshtml
+++ b/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_GoogleAnalytics.cshtml
@@ -1,4 +1,4 @@
-﻿@model FamilyHubsUiOptions
+﻿@model FamilyHubs.SharedKernel.Razor.FamilyHubsUi.Options.FamilyHubsUiOptions
 
 
 @if (!string.IsNullOrEmpty(Model.Analytics?.MeasurementId))
