--- a/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Header.cshtml
+++ b/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Header.cshtml
@@ -1,4 +1,4 @@
-﻿@model FamilyHubsUiOptions
+﻿@model FamilyHubs.SharedKernel.Razor.FamilyHubsUi.Options.FamilyHubsUiOptions
 
 <header class="govuk-header" role="banner" data-module="govuk-header">
     <div class="govuk-header__container">
