--- a/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_PhaseBanner.cshtml
+++ b/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_PhaseBanner.cshtml
@@ -1,4 +1,5 @@
-﻿@model FamilyHubsUiOptions
+﻿@using FamilyHubs.SharedKernel.Razor.FamilyHubsUi.Options
+@model FamilyHubs.SharedKernel.Razor.FamilyHubsUi.Options.FamilyHubsUiOptions
 
 @if (Model.Phase != Phase.Release)
 {
