--- a/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_CookieBanner.cshtml
+++ b/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_CookieBanner.cshtml
@@ -1,4 +1,4 @@
-﻿@model FamilyHubsUiOptions
+﻿@model FamilyHubs.SharedKernel.Razor.FamilyHubsUi.Options.FamilyHubsUiOptions
 
 @*as we don't use session state (what GDS calls server cookies!), the banner can only be shown when js is enabled, see https://design-system.service.gov.uk/components/cookie-banner/*@
 
