--- a/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Footer.cshtml
+++ b/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Footer.cshtml
@@ -1,4 +1,4 @@
-﻿@model FamilyHubsUiOptions
+﻿@model FamilyHubs.SharedKernel.Razor.FamilyHubsUi.Options.FamilyHubsUiOptions
 
 <footer class="govuk-footer" role="contentinfo">
     <div class="govuk-width-container ">
