--- a/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Head.cshtml
+++ b/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Head.cshtml
@@ -1,4 +1,4 @@
-﻿@model FamilyHubsUiOptions
+﻿@model FamilyHubs.SharedKernel.Razor.FamilyHubsUi.Options.FamilyHubsUiOptions
 
 <partial name="_GoogleAnalytics.cshtml" model="Model"/>
 
