--- a/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Layout.cshtml
+++ b/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@* we could use IOptionsSnapshot for updates without downtime, but we probably don't want the overhead for something so central*@
+﻿@using FamilyHubs.SharedKernel.Razor.FamilyHubsUi.Options
+@* we could use IOptionsSnapshot for updates without downtime, but we probably don't want the overhead for something so central*@
 @inject IOptions<FamilyHubsUiOptions> FamilyHubsUiOptions
 @{
     var familyHubsUiOptions = FamilyHubsUiOptions.Value;
