--- a/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Head.cshtml
+++ b/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Head.cshtml
@@ -10,11 +10,11 @@
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<link rel="shortcut icon" sizes="16x16 32x32 48x48" href="_content/RclTemp/lib/govuk/assets/images/favicon.ico" type="image/x-icon">
-<link rel="mask-icon" href="_content/RclTemp/lib/govuk/assets/images/govuk-mask-icon.svg" color="#0b0c0c">
-<link rel="apple-touch-icon" sizes="180x180" href="_content/RclTemp/lib/govuk/assets/images/govuk-apple-touch-icon-180x180.png">
-<link rel="apple-touch-icon" sizes="167x167" href="_content/RclTemp/lib/govuk/assets/images/govuk-apple-touch-icon-167x167.png">
-<link rel="apple-touch-icon" sizes="152x152" href="_content/RclTemp/lib/govuk/assets/images/govuk-apple-touch-icon-152x152.png">
-<link rel="apple-touch-icon" href="_content/RclTemp/lib/govuk/assets/images/govuk-apple-touch-icon.png">
+<link rel="shortcut icon" sizes="16x16 32x32 48x48" href="_content/FamilyHubs.SharedKernel.Razor/lib/govuk/assets/images/favicon.ico" type="image/x-icon">
+<link rel="mask-icon" href="_content/FamilyHubs.SharedKernel.Razor/lib/govuk/assets/images/govuk-mask-icon.svg" color="#0b0c0c">
+<link rel="apple-touch-icon" sizes="180x180" href="_content/FamilyHubs.SharedKernel.Razor/lib/govuk/assets/images/govuk-apple-touch-icon-180x180.png">
+<link rel="apple-touch-icon" sizes="167x167" href="_content/FamilyHubs.SharedKernel.Razor/lib/govuk/assets/images/govuk-apple-touch-icon-167x167.png">
+<link rel="apple-touch-icon" sizes="152x152" href="_content/FamilyHubs.SharedKernel.Razor/lib/govuk/assets/images/govuk-apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" href="_content/FamilyHubs.SharedKernel.Razor/lib/govuk/assets/images/govuk-apple-touch-icon.png">
 
-<meta property="og:image" content="_content/RclTemp/lib/govuk/assets/images/govuk-opengraph-image.png">
+<meta property="og:image" content="_content/FamilyHubs.SharedKernel.Razor/lib/govuk/assets/images/govuk-opengraph-image.png">
