--- a/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Layout.cshtml
+++ b/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Layout.cshtml
@@ -37,12 +37,16 @@
     </div>
 
     <partial name="_Footer.cshtml" model="familyHubsUiOptions" />
+    
+@*todo: is it better to include the version number in the script,
+which means after a new deployment, if the script hasn't changed, the user browsers can used their cached version,
+    or use asp-append-version, which means that after a deployment browsers could refetch unnecessarily, *@
 
-    <script src="~/js/govuk-frontend-4.5.0.min.js"></script>
+<script src="~/js/govuk-frontend-4.5.0.min.js"></script>
 @*todo: include package scripts into app.js, or import it separately, like govuk?*@
 @*if separately, will have to bundle and minify it*@
 @*todo: task to copy to wwwroot? or pick up from rcl?*@
-    <script src="~/js/familyhubs-frontend-1.0.6-alpha.min.js" asp-append-version="true"></script>
+    <script src="~/js/familyhubs-frontend-1.0.7-alpha.min.js" asp-append-version="true"></script>
     <script src="~/js/app.js" asp-append-version="true"></script>
 
     <script>
