--- a/src/familyhubs-frontend/styles/all.scss
+++ b/src/familyhubs-frontend/styles/all.scss
@@ -3,3 +3,4 @@
 @import "../../govuk-frontend/govuk/all";
 @import "../../@ministryofjustice/frontend/moj/components/filter/_filter";
 @import "global";
+@import "layout/_header";
