--- a/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_CookieBanner.cshtml
+++ b/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_CookieBanner.cshtml
@@ -20,7 +20,7 @@
             <button value="reject" type="button" name="cookies" class="govuk-button js-cookie-banner-reject" data-module="govuk-button">
                 Reject analytics cookies
             </button>
-            <a asp-page="/Cookies/Index">View cookies</a>
+            <a href="@Model.Analytics?.CookiePageUrl">View cookies</a>
         </div>
     </div>
 
@@ -28,7 +28,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
                 <div class="govuk-cookie-banner__content">
-                    <p class="govuk-body">You’ve accepted analytics cookies. You can <a asp-page="/Cookies/Index">change your cookie settings</a> at any time.</p>
+                    <p class="govuk-body">You’ve accepted analytics cookies. You can <a href="@Model.Analytics?.CookiePageUrl">change your cookie settings</a> at any time.</p>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
                 <div class="govuk-cookie-banner__content">
-                    <p class="govuk-body">You’ve rejected analytics cookies. You can <a asp-page="/Cookies/Index">change your cookie settings</a> at any time.</p>
+                    <p class="govuk-body">You’ve rejected analytics cookies. You can <a href="@Model.Analytics?.CookiePageUrl">change your cookie settings</a> at any time.</p>
                 </div>
             </div>
         </div>
