--- a/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Header.cshtml
+++ b/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_Header.cshtml
@@ -8,10 +8,10 @@
                     <span class="govuk-header__logotype">
                         <!--[if gt IE 8]><!-->
                         @*todo need svg*@
-                        <img src="_content/FamilyHubs.SharedKernel.Razor/images/crest.png" class="govuk-header__logotype-crown-fallback-image" alt="Department for Education">
+                        <img src="images/crest.png" class="govuk-header__logotype-crown-fallback-image" alt="Department for Education">
                         <!--<![endif]-->
                         <!--[if IE 8]>
-                            <img src="_content/FamilyHubs.SharedKernel.Razor/images/crest.png" class="govuk-header__logotype-crown-fallback-image" alt="Department for Education" width="45" height="45">
+                            <img src="images/crest.png" class="govuk-header__logotype-crown-fallback-image" alt="Department for Education" width="45" height="45">
                         <![endif]-->
                         <span class="govuk-header__logotype-text">
                             Department for Education
