--- a/examples/GovSignInExample/GovSignInExample/Pages/Index.cshtml
+++ b/examples/GovSignInExample/GovSignInExample/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Gov Sign in demo</h1>
+    <p>This is an example app demonstrating the use of GovLogin code within the SharedKernel</p>
 </div>
