--- a/examples/GovSignInExample/GovSignInExample/Pages/Shared/_Layout.cshtml
+++ b/examples/GovSignInExample/GovSignInExample/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/SecurePage">SecurePage</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/UnSecurePage">UnsecurePage</a>
+                        </li>
                     </ul>
                 </div>
             </div>
