--- a/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_PhaseBanner.cshtml
+++ b/src/FamilyHubs.SharedKernel.Razor/Pages/Shared/_PhaseBanner.cshtml
@@ -9,7 +9,7 @@
                 @Model.Phase
             </strong>
             <span class="govuk-phase-banner__text">
-                This is a new service, your <a href="@Model.FeedbackUrl">feedback</a> will help us improve it.
+                This is a new service, your <a href="@Model.FeedbackUrl" rel="noreferrer noopener" target="_blank">feedback</a> will help us improve it.
             </span>
         </p>
     </div>
