--- a/examples/GovSignInExample/GovSignInExample/Pages/Shared/_Layout.cshtml
+++ b/examples/GovSignInExample/GovSignInExample/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/UnSecurePage">UnsecurePage</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/MakeApiCall">MakeApiCall</a>
+                        </li>
                     </ul>
                 </div>
             </div>
