--- a/examples/GovSignInExample/GovSignInExample/Pages/SecurePage.cshtml
+++ b/examples/GovSignInExample/GovSignInExample/Pages/SecurePage.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using System.Security.Claims
-@using FamilyHubs.SharedKernel.GovLogin.Authentication;
+@using FamilyHubs.SharedKernel.Identity;
 @inject IHttpContextAccessor _httpContextAccessor
 
 @model GovSignInExample.Pages.SecurePageModel
