--- a/examples/GovSignInExample/GovSignInExample/Pages/SecurePage.cshtml
+++ b/examples/GovSignInExample/GovSignInExample/Pages/SecurePage.cshtml
@@ -45,7 +45,7 @@
     <input type="button" value="Make Api Call" />
 </a>
 
-<a asp-area="" asp-page="/Account/signout">
+<a href="/Account/signout">
     <input type="button" value="Sign Out" />
 </a>
 
