Redirect After TCs

--- a/examples/GovSignInExample/GovSignInExample/Pages/TermsAndConditionsPage.cshtml
+++ b/examples/GovSignInExample/GovSignInExample/Pages/TermsAndConditionsPage.cshtml
@@ -5,5 +5,6 @@
 Terms and conditions page
 
 <form method="post">
+    <input type="hidden" id="ReturnPath" name="ReturnPath" asp-for="ReturnPath" />
     <button type="submit">Accept</button>
 </form>
